--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,19 +4,21 @@ version = "0.1.0"
 description = "ThinkDepth.ai Deep Research"
 requires-python = ">=3.11"
 dependencies = [
-"langgraph>=0.5.4",
-"langchain>=0.3.0",
-"langchain-openai>=0.2.0",
-"langchain-anthropic>=0.3.0",
-"langchain_community>=0.3.27",
-"langchain_tavily>=0.2.7",
-"langchain_mcp_adapters>=0.1.9",
-"pydantic>=2.0.0",
-"rich>=14.0.0",
-"jupyter>=1.0.0",
-"ipykernel>=6.20.0",
-"tavily-python>=0.5.0",
+    "langgraph>=0.5.4",
+    "langchain>=0.3.0",
+    "langchain-openai>=0.2.0",
+    "langchain-anthropic>=0.3.0",
+    "langchain_community>=0.3.27",
+    "langchain_tavily>=0.2.7",
+    "langchain_mcp_adapters>=0.1.9",
+    "typing_extensions>=4.0.0",
+    "pydantic>=2.0.0",
+    "rich>=14.0.0",
+    "jupyter>=1.0.0",
+    "ipykernel>=6.20.0",
+    "tavily-python>=0.5.0",
 ]
+
 
 [project.optional-dependencies]
 dev = ["mypy>=1.11.1", "ruff>=0.6.1"]
