--- a/config.yml.template
+++ b/config.yml.template
@@ -16,6 +16,14 @@ stages:
           gpt-4o-supervisor: gpt-4o-supervisor
           gpt-4o-mini: gpt-4o-mini
           gpt-4o-mini-extended: gpt-4o-mini-extended
+    search:
+      backend: tavily
+      tavily:
+        api_key: ${TAVILY_API_KEY}
+        base_url: https://api.tavily.com
+        max_results: 3
+        topic: general
+        include_raw_content: true
     roles:
       supervisor:
         backend: azure
