--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,19 @@
-langgraph
-langchain
-langchain-openai
-langchain-azure-ai
-langchain-anthropic
-langchain_community
-langchain_tavily
-langchain_mcp_adapters
-typing_extensions
-pydantic
-rich
-jupyter
-ipykernel
-tavily-python
-PyYAML
-langchain-core
+langgraph>=1.0.5
+langchain>=1.2.0
+langchain-openai>=1.1.6
+langchain-azure-ai>=1.0.0
+langchain-anthropic>=1.3.0
+typing_extensions>=4.15.0
+pydantic>=2.12.5
+rich>=14.2.0
+jupyter>=1.1.1
+ipykernel>=7.1.0
+tavily-python>=0.7.17
+PyYAML>=6.0.3
+langchain-core>=1.2.5
+typing_extensions>=4.15.0
+pydantic>=2.12.5
+rich>=14.2.0
+tavily-python>=0.7.17
+PyYAML>=6.0.3
+langchain-core>=1.2.5
