--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,24 +4,34 @@ version = "0.1.0"
 description = "ThinkDepth.ai Deep Research"
 requires-python = ">=3.11"
 dependencies = [
-    "langgraph>=0.5.4",
-    "langchain>=0.3.0",
-    "langchain-openai>=0.2.0",
-    "langchain-anthropic>=0.3.0",
+    "langgraph>=1.0.5",
+    "langchain>=1.2.0",
+    "langchain-openai>=1.1.6",
+    "langchain-azure-ai>=1.0.0",
+    "langchain-anthropic>=1.3.0",
+    "langchain-core>=1.2.5",
     "langchain_community>=0.3.27",
     "langchain_tavily>=0.2.7",
     "langchain_mcp_adapters>=0.1.9",
-    "typing_extensions>=4.0.0",
-    "pydantic>=2.0.0",
-    "rich>=14.0.0",
-    "jupyter>=1.0.0",
-    "ipykernel>=6.20.0",
-    "tavily-python>=0.5.0",
+    "typing_extensions>=4.15.0",
+    "pydantic>=2.12.5",
+    "rich>=14.2.0",
+    "jupyter>=1.1.1",
+    "ipykernel>=7.1.0",
+    "tavily-python>=0.7.17",
+    "PyYAML>=6.0.3",
 ]
 
 
 [project.optional-dependencies]
-dev = ["mypy>=1.11.1", "ruff>=0.6.1"]
+dev = [
+    "mypy>=1.11.1",
+    "ruff>=0.6.1",
+    "pytest>=9.0.2",
+    "pytest-cov>=7.0.0",
+    "pytest-asyncio>=1.3.0",
+    "build>=1.2.2",
+]
 
 [build-system]
 requires = ["setuptools>=73.0.0", "wheel"]
@@ -29,12 +39,26 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
 packages = ["deep_research"]
+py-modules = [
+    "llm_factory",
+    "logging",
+    "multi_agent_supervisor",
+    "prompts",
+    "research_agent",
+    "research_agent_full",
+    "research_agent_scope",
+    "search_factory",
+    "state_multi_agent_supervisor",
+    "state_research",
+    "state_scope",
+    "utils",
+]
 
 [tool.setuptools.package-dir]
-"deep_research" = "src"
+"" = "src"
 
 [tool.setuptools.package-data]
-"*" = ["py.typed"]
+deep_research = ["py.typed"]
 
 [tool.ruff]
 lint.select = [
