introduce timeout configuration; add search provider plugin extension interface

--- a/config.yml.azure.template
+++ b/config.yml.azure.template
@@ -7,6 +7,7 @@ stages:
         api_key:
         azure_endpoint:
         api_version:
+        timeout_seconds: 60
         models:
           gpt-5.1-2025-11-13:
             max_tokens: 128000
@@ -18,35 +19,43 @@ stages:
         max_results: 3
         topic: general
         include_raw_content: true
+        timeout_seconds: 30
     roles:
       supervisor:
         backend: azure
         handle: gpt-5.1-2025-11-13
         max_tokens: 128000
+        timeout_seconds: 60
       researcher_main:
         backend: azure
         handle: gpt-5.1-2025-11-13
         max_tokens: 128000
+        timeout_seconds: 60
       researcher_summarizer:
         backend: azure
         handle: gpt-5.1-2025-11-13
         max_tokens: 128000
+        timeout_seconds: 60
       researcher_compressor:
         backend: azure
         handle: gpt-5.1-2025-11-13
         max_tokens: 128000
+        timeout_seconds: 60
       writer:
         backend: azure
         handle: gpt-5.1-2025-11-13
         max_tokens: 128000
+        timeout_seconds: 60
       scope_primary:
         backend: azure
         handle: gpt-5.1-2025-11-13
         max_tokens: 128000
+        timeout_seconds: 60
       scope_creative:
         backend: azure
         handle: gpt-5.1-2025-11-13
         max_tokens: 128000
+        timeout_seconds: 60
 
 
 
